--- a/GameData/SpaceShuttleRCSNosecone/3.0.0.0.htm
+++ b/GameData/SpaceShuttleRCSNosecone/3.0.0.0.htm
@@ -34,6 +34,28 @@ title="GitHub IO" alt="Pages" /></a></p>
 <b>DO A CLEAN INSTALL:</br> DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/SpaceShuttleRCSNosecone/files">CurseForge</a></p></div>
 
 <h2 id="changes">Changes</h2>
+<ul>
+<li><p>Better Texture</p></li>
+<li><p>Fixed thrusters not being symmetrical</p></li>
+<li><p>Fixed not showing up in Career mode (Specialized
+Control)</p></li>
+<li><p>Add</p>
+<ul>
+<li>[ghostParts.cfg] v1.3.0.0
+<ul>
+<li>ssrn-long --&gt; ssncLong</li>
+<li>ssrn-short --&gt; ssncShort</li>
+<li>to provide continuity with future versions</li>
+</ul></li>
+</ul></li>
+</ul>
+<h3 id="status-3000">Status 3.0.0.0</h3>
+<ul>
+<li>Issues
+<ul>
+<li>closes #6 - Previous Release - Archival</li>
+</ul></li>
+</ul>
 <hr />
 <h2 id="see-more">See More</h2>
 <ul>
