--- a/GameData/SpaceShuttleRCSNosecones/3.0.99.0.htm
+++ b/GameData/SpaceShuttleRCSNosecones/3.0.99.0.htm
@@ -202,10 +202,16 @@ maneuver manoeuvre react rendezvous rotate stab steer translate</li>
 <li>closes #30 - Add localized tags to parts</li>
 </ul>
 <h3 id="status">Status</h3>
-<p>1 - Space Shuttle RCS Nosecones (RCSN) (SSNC) 3.0.99.0-adoption
-<code>&lt;Cone Anyone?&gt;</code> edition 2 - 3.0.99.0 Create Legal
-Mumbo Jumbo 3 - 3.0.99.0 Create Documentation 4 - 3.0.99.0 Create Social
-Media</p>
+<ul>
+<li>Issues
+<ul>
+<li>closes #1 - Space Shuttle RCS Nosecones (RCSN) (SSNC)
+3.0.99.0-adoption <code>&lt;Cone Anyone?&gt;</code> edition</li>
+<li>closes #2 - 3.0.99.0 Create Legal Mumbo Jumbo</li>
+<li>closes #3 - 3.0.99.0 Create Documentation</li>
+<li>closes #4 - 3.0.99.0 Create Social Media</li>
+</ul></li>
+</ul>
 <hr />
 <h2 id="see-more">See More</h2>
 <ul>
