--- a/GameData/SpaceShuttleRCSNosecones/3.0.99.0.htm
+++ b/GameData/SpaceShuttleRCSNosecones/3.0.99.0.htm
@@ -24,8 +24,8 @@ href="https://zer0kerbal.github.io/SpaceShuttleRCSNosecones/"
 title="GitHub Pages"><img
 src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColor=9cf&amp;logoColor=181717&amp;logo=github/"
 title="GitHub IO" alt="Pages" /></a></p>
-<p>#Version 3.0.99.0-adoption - <code>&lt;Cone Anyone?&gt;</code>
-edition</p>
+<h1 id="version-30990-adoption---cone-anyone-edition">Version
+3.0.99.0-adoption - <code>&lt;Cone Anyone?&gt;</code> edition</h1>
 <ul>
 <li>01 Aug 2022</li>
 <li>Released for Kerbal Space Program [KSP 1.12.3]</li>
